add context for missing fields

--- a/reformat-charttotext.ipynb
+++ b/reformat-charttotext.ipynb
@@ -2,60 +2,69 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 26,
    "id": "f182d318",
    "metadata": {},
    "outputs": [],
    "source": [
     "import json\n",
     "import pandas as pd\n",
-    "from nltk.tokenize import word_tokenize"
+    "from nltk.tokenize import word_tokenize\n",
+    "import csv"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 10,
+   "id": "1300f07b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'/Users/akankshitadash/Desktop/Stanford/Quarter2/CS399/DataGathering'"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import os\n",
+    "os.getcwd()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "id": "552da0d7",
    "metadata": {},
    "outputs": [],
    "source": [
-    "reference_file = 'concadia-charts/concadia-charts-manual-filtered.json'\n",
-    "df = pd.read_json(reference_file)"
+    "# reference_file = 'concadia-charts/concadia-charts-manual-filtered.json'\n",
+    "# df = pd.read_json(reference_file)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 12,
    "id": "a752b057",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "article_id : Autism\n",
-      "filename : 4.jpg\n",
-      "orig_filename : https://upload.wikimedia.org/wikipedia/commons/thumb/5/57/US-autism-6-17-1996-2007.png/220px-US-autism-6-17-1996-2007.png\n",
-      "description : {'raw': 'Bar chart versus time. The graph rises steadily from 1996 to 2007, from about 0.7 to about 5.3. The trend curves slightly upward.', 'tokens': ['Bar', 'chart', 'versus', 'time', '.', 'The', 'graph', 'rises', 'steadily', 'from', '1996', 'to', '2007', ',', 'from', 'about', '0.7', 'to', 'about', '5.3', '.', 'The', 'trend', 'curves', 'slightly', 'upward', '.']}\n",
-      "caption : {'raw': 'Reports of autism cases per 1,000 children grew dramatically in the US from 1996 to 2007. It is unknown how much, if any, growth came from changes in rates of autism.', 'tokens': ['Reports', 'of', 'autism', 'cases', 'per', '1,000', 'children', 'grew', 'dramatically', 'in', 'the', 'US', 'from', '1996', 'to', '2007', '.', 'It', 'is', 'unknown', 'how', 'much', ',', 'if', 'any', ',', 'growth', 'came', 'from', 'changes', 'in', 'rates', 'of', 'autism', '.']}\n",
-      "context : {'raw': \" Most recent reviews tend to estimate a prevalence of 12 per 1,000 for autism and close to 6 per 1,000 for ASD as of 2007. A 2016 survey in the United States reported a rate of 25 per 1,000 children for ASD. Globally, autism affects an estimated 24.8 million people as of 2015[update], while Asperger syndrome affects a further 37.2 million. In 2012, the NHS estimated that the overall prevalence of autism among adults aged 18 years and over in the UK was 1.1%. Rates of PDD-NOS's has been estimated at 3.7 per 1,000, Asperger syndrome at roughly 0.6 per 1,000, and childhood disintegrative disorder at 0.02 per 1,000. CDC estimates about 1 out of 59 (1.7%) for 2014, an increase from 1 out of every 68 children (1.5%) for 2010.\", 'tokens': ['Most', 'recent', 'reviews', 'tend', 'to', 'estimate', 'a', 'prevalence', 'of', '12', 'per', '1,000', 'for', 'autism', 'and', 'close', 'to', '6', 'per', '1,000', 'for', 'ASD', 'as', 'of', '2007', '.', 'A', '2016', 'survey', 'in', 'the', 'United', 'States', 'reported', 'a', 'rate', 'of', '25', 'per', '1,000', 'children', 'for', 'ASD', '.', 'Globally', ',', 'autism', 'affects', 'an', 'estimated', '24.8', 'million', 'people', 'as', 'of', '2015', '[', 'update', ']', ',', 'while', 'Asperger', 'syndrome', 'affects', 'a', 'further', '37.2', 'million', '.', 'In', '2012', ',', 'the', 'NHS', 'estimated', 'that', 'the', 'overall', 'prevalence', 'of', 'autism', 'among', 'adults', 'aged', '18', 'years', 'and', 'over', 'in', 'the', 'UK', 'was', '1.1', '%', '.', 'Rates', 'of', 'PDD-NOS', \"'s\", 'has', 'been', 'estimated', 'at', '3.7', 'per', '1,000', ',', 'Asperger', 'syndrome', 'at', 'roughly', '0.6', 'per', '1,000', ',', 'and', 'childhood', 'disintegrative', 'disorder', 'at', '0.02', 'per', '1,000', '.', 'CDC', 'estimates', 'about', '1', 'out', 'of', '59', '(', '1.7', '%', ')', 'for', '2014', ',', 'an', 'increase', 'from', '1', 'out', 'of', 'every', '68', 'children', '(', '1.5', '%', ')', 'for', '2010', '.']}\n",
-      "split : train\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "for key, value in df['images'].iloc[0].items():\n",
-    "    print(key, \":\",value)"
+    "# for key, value in df['images'].iloc[0].items():\n",
+    "#     print(key, \":\",value)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 13,
    "id": "d050eda4",
    "metadata": {},
    "outputs": [],
    "source": [
-    "charts = ['statista_images', 'pew_images']\n",
+    "charts = ['statista-images', 'pew-images']\n",
     "dataset = '/dataset'\n",
     "multicolumn = '/multiColumn' #for multiColumn data\n",
     "images = '/imgs'\n",
@@ -75,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 14,
    "id": "d1888993",
    "metadata": {},
    "outputs": [],
@@ -85,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 15,
    "id": "eee8a3bb",
    "metadata": {},
    "outputs": [
@@ -120,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 16,
    "id": "0307cdce",
    "metadata": {},
    "outputs": [
@@ -296,7 +305,7 @@
        "4  https://www.statista.com/statistics/378059/cha...  "
       ]
      },
-     "execution_count": 54,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -307,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 17,
    "id": "985962c9",
    "metadata": {},
    "outputs": [],
@@ -317,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 18,
    "id": "2d50be07",
    "metadata": {},
    "outputs": [],
@@ -1030,9 +1039,102 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "4543c658",
+   "metadata": {},
+   "source": [
+    "## Statista Add Context"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "id": "0bce1ee8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "normal_filepath = 'statista-images/dataset/data/'\n",
+    "multicolumn_filepath = 'statista-images/dataset/multiColumn/data/'\n",
+    "df = pd.read_json('datasets/statista/statista.json')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "id": "5d6305d0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "statista_items = {'images':[]}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "id": "6dabc6fe",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i, item in df['images'].items():\n",
+    "    context = item['context']['raw']\n",
+    "    filename = item['filename']\n",
+    "    if filename.startswith('multi'):\n",
+    "        filepath = filename.replace(\"multiColumn\",\"\").split('.')[0]+'.csv'\n",
+    "        with open(multicolumn_filepath+filepath, 'r') as file:\n",
+    "            csvreader = csv.reader(file)\n",
+    "            all_data = []\n",
+    "            for row in csvreader:\n",
+    "                all_data.extend(row)\n",
+    "            context+=' '.join(all_data)\n",
+    "    else:\n",
+    "        filepath = filename.split('.')[0]+'.csv'\n",
+    "        with open(normal_filepath+filepath, 'r') as file:\n",
+    "            csvreader = csv.reader(file)\n",
+    "            all_data = []\n",
+    "            for row in csvreader:\n",
+    "                all_data.extend(row)\n",
+    "            context+=' '.join(all_data)\n",
+    "    item['context']['raw'] = context\n",
+    "    item['context']['tokens'] =  word_tokenize(context)\n",
+    "    statista_items['images'].append(item)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "id": "7cc3f6f3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "34811"
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(statista_items['images'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "id": "b0327aaf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(\"datasets/statista/statista.json\", \"w\") as outfile:\n",
+    "    outfile.write(json.dumps(statista_items, ensure_ascii=False))"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f002fe53",
+   "id": "08b962e3",
    "metadata": {},
    "outputs": [],
    "source": []
